k8s_deployment/ingress/alb-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rasa-alb
  namespace: rasa-jw
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: rasa-alb
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: rasa-service
              servicePort: 5005
